--- a/app/assets/stylesheets/sections/_build.scss
+++ b/app/assets/stylesheets/sections/_build.scss
@@ -84,7 +84,7 @@ article.build {
         li {
           font-size: 50px;
           height: 45px;
-          width: 90px;
+          width: 45px;
           margin: 14px 5px 7px 0px;
           line-height: 45px;
         }
@@ -93,6 +93,19 @@ article.build {
   }
 }
 
+@media only screen and (max-device-width:1080px){
+  .one-tile {
+    article.build {
+      aside {
+        ol {
+          li {
+            width: 90px;
+          }
+        }
+      }
+    }
+  }
+}
 
 .two-tile {
   article.build {
@@ -223,4 +236,3 @@ article.build {
     }
   }
 }
-
