--- a/app/assets/stylesheets/sections/_dashboard.css.scss
+++ b/app/assets/stylesheets/sections/_dashboard.css.scss
@@ -109,7 +109,7 @@ body.dashboard {
   }
 }
 
-@media only screen and (max-device-width:1080px){
+@media only screen and (min-width: 1080px) and (max-device-width:1080px){
   body.dashboard {
     -moz-transform: scale(0.6, 0.6); /* Moz-browsers */
     zoom: 0.6; /* Other non-webkit browsers */
